--- a/Aim! For watchOS/Base.lproj/Interface.storyboard
+++ b/Aim! For watchOS/Base.lproj/Interface.storyboard
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kcj-o3-Mv4">
-    <device id="watch38" orientation="portrait">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kcj-o3-Mv4">
+    <device id="watch42" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="watchOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11508"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="12029"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="PhosphateProInline.otf">
+            <string>PhosphatePro-Inline</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="4hi-jR-Kag">
             <objects>
                 <controller id="Kcj-o3-Mv4">
                     <items>
-                        <group width="0.94999999999999996" height="31" alignment="center" id="uXT-To-DBm">
+                        <group width="147" height="50" alignment="center" radius="7" id="uXT-To-DBm">
                             <items>
-                                <label width="1" height="1" alignment="center" text="Aim!" textAlignment="center" id="bA6-tC-Ylm">
+                                <label width="1" height="54" alignment="center" text="Aim!" textAlignment="center" id="bA6-tC-Ylm">
                                     <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="27"/>
                                 </label>
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
@@ -25,19 +31,21 @@
                         <separator alignment="center" id="fHM-rM-zom">
                             <color key="color" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
                         </separator>
-                        <label alignment="center" text="Use Aim! To Boost Your Productivity" textAlignment="center" numberOfLines="0" id="DLW-c8-80L">
-                            <fontDescription key="font" type="system" pointSize="11"/>
+                        <label height="35" alignment="center" text="Use Aim! To Boost Your Productivity!" textAlignment="center" numberOfLines="0" id="DLW-c8-80L">
+                            <fontDescription key="font" type="system" pointSize="12"/>
                         </label>
-                        <group width="1" height="44" alignment="center" id="XKG-ub-hko">
+                        <group width="1" height="60" alignment="center" id="XKG-ub-hko">
                             <items>
-                                <button width="0.5" height="1" alignment="left" title="Sessions" id="ZOT-Sz-ZnS">
-                                    <fontDescription key="font" type="system" pointSize="12"/>
+                                <button width="0.5" height="60" alignment="left" title="Sessions" id="ZOT-Sz-ZnS">
+                                    <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="13"/>
                                     <connections>
                                         <segue destination="l1H-L2-trl" kind="modal" id="GsZ-08-wS5"/>
                                     </connections>
                                 </button>
                                 <button width="0.5" height="1" alignment="right" title="Awards" id="tvU-5d-t87">
-                                    <fontDescription key="font" type="system" pointSize="12"/>
+                                    <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="13"/>
                                     <connections>
                                         <segue destination="h1y-vm-7uY" kind="modal" id="CAZ-xa-uKW"/>
                                     </connections>
@@ -48,17 +56,18 @@
                     </items>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="34" y="46"/>
+            <point key="canvasLocation" x="34" y="45.769230769230774"/>
         </scene>
         <!--Interface Controller-->
         <scene sceneID="TbT-bV-o7I">
             <objects>
                 <controller id="h1y-vm-7uY">
                     <items>
-                        <group width="1" alignment="center" id="MVK-Al-b8b">
+                        <group width="1" height="30" alignment="center" id="MVK-Al-b8b">
                             <items>
-                                <label alignment="center" text="Awards" textAlignment="center" id="XnV-ef-O2Y">
+                                <label alignment="center" verticalAlignment="center" text="Awards" textAlignment="center" id="XnV-ef-O2Y">
                                     <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="17"/>
                                 </label>
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
